# Air-Hockey-Game

./: .gitignore  README.md  pyproject.toml
assets/themes/: default.json  retro.json
docs/: build.md  calibration.md  decisions.md  release_checklist.md  settings.md  status.md  troubleshooting.md
docs/commit_notes/: a1.md  a2.md  a3.md  a4.md  a5.md  app1.md  audio1.md  audio2.md  audio3.md  b1.md  b2.md  b3.md  b4.md  c1.md  c2.md  c3.md  cam1.md  cam2.md  cam3.md  cam4.md  cam5.md  cam6.md  d1.md  d2.md  d3.md  d4.md  deps1.md  doc1.md  doc2.md  doc3.md  e1.md  e2.md  e3.md  f1.md  f2.md  font1.md  font2.md  font3.md  g1.md  g2.md  (+46 more)
src/air_hockey/: __init__.py  app.py  main.py
src/air_hockey.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/air_hockey/config/: defaults.json  io.py  settings.py
src/air_hockey/engine/: audio.py  calibration.py  camera.py  hand_tracking.py  physics.py  vision.py  windowing.py
src/air_hockey/game/: entities.py  field.py  themes.py
src/air_hockey/ui/: fonts.py  widgets.py
src/air_hockey/ui/screens/: calibration.py  hud.py  menu.py  pause.py  play.py  scoreboard.py  settings.py
tests/: test_config.py  test_vision.py
tools/package/: pyinstaller.spec
